--- a/portfolio.html
+++ b/portfolio.html
@@ -39,64 +39,64 @@
         <section class="portfolio list">
             <h1>Portfolio-title</h1>
             <ul class="portfolio-btn-list list">
-                <li><button type="button" class="portfolio-btn-list">All</button></li>
-                <li><button type="button" class="portfolio-btn-list">Web Site</button></li>
-                <li><button type="button" class="portfolio-btn-list">App</button></li>
-                <li><button type="button" class="portfolio-btn-list">Design</button></li>
-                <li><button type="button" class="portfolio-btn-list">Marketing</button></li>
+                <li><button type="button" class="portfolio-btn">All</button></li>
+                <li><button type="button" class="portfolio-btn">Web Site</button></li>
+                <li><button type="button" class="portfolio-btn">App</button></li>
+                <li><button type="button" class="portfolio-btn">Design</button></li>
+                <li><button type="button" class="portfolio-btn">Marketing</button></li>
             </ul>
             <ul class="img-portfolio list">
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">      
-                    <img class="portfolio-img" src="images/img.slaid-min.jpg" alt="slaid" width="360"/>
+                    <img class="portfolio-img" src="images/img-slaid-min.jpg" alt="slaid" width="360"/>
                     <h2 class="portfolio-header ">Banking App Interface Concept</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">        
-                    <img class="portfolio-img" src="images/img.qc-min.jpg" alt="qc" width="360"/>
+                    <img class="portfolio-img" src="images/img-qc-min.jpg" alt="qc" width="360"/>
                     <h2 class="portfolio-header">Cashless Payment</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">
-                    <img class="" src="images/img.normalcy-min.jpg" alt="normalcy" width="360"/>
+                    <img class="" src="images/img-normalcy-min.jpg" alt="normalcy" width="360"/>
                     <h2 class="portfolio-header">Meditation App</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">
-                    <img class="portfolio-img" src="images/img.steering-min.jpg" alt="steering" width="360"/>
+                    <img class="portfolio-img" src="images/img-steering-min.jpg" alt="steering" width="360"/>
                     <h2 class="portfolio-header">Taxi Service</h2> 
                     <p class="portfolio-text ">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">     
-                    <img class="portfolio-img" src="images/img.screen-min.jpg" alt="screen" width="360"/>
+                    <img class="portfolio-img" src="images/img-screen-min.jpg" alt="screen" width="360"/>
                     <h2 class="portfolio-header">Screen Illustrations</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">         
-                    <img class="portfolio-img"g src="images/img.smile-min.jpg" alt="smile" width="360"/>
+                    <img class="portfolio-img"g src="images/img-smile-min.jpg" alt="smile" width="360"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
                     <p class="portfolio-text">Marketing</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">   
-                    <img class="portfolio-img" src="images/img.teh-min.jpg" alt="teh" width="360"/>
+                    <img class="portfolio-img" src="images/img-teh-min.jpg" alt="teh" width="360"/>
                     <h2 class="portfolio-header">Instagram Stories Concept</h2> 
                     <p class="portfolio-text">Design</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">        
-                    <img class="portfolio-img" src="images/img.product-min.jpg" alt="product" width="360"/>
+                    <img class="portfolio-img" src="images/img-product-min.jpg" alt="product" width="360"/>
                     <h2 class="portfolio-header">Organic Food</h2> 
                     <p class="portfolio-text">Web Site</p></a>
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">  
-                    <img class="portfolio-img" src="images/img.coffee-min.jpg" alt="cofee"/>
+                    <img class="portfolio-img" src="images/img-coffee-min.jpg" alt="cofee"/>
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
                     <p class="portfolio-text link">Web Site</p></a>
                 </li>
