--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <li class="header-item">
                     <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html" target="_blank" class="nav-link link">Portfolio</a></li>
+                    <a class="header-link link" href="./portfolio.html" target="_blank">Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link link" href="">Contacts</a></li>
             </ul>
@@ -48,7 +48,7 @@
             <ul class="img-portfolio list">
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">      
-                    <img class="portfolio-img" src="./images/img-slaid-min.jpg" alt="slaid" width="360"/>
+                    <img class="portfolio-img" src="./images/img-slaid-min.jpg" alt="slaid"  width="360"/>
                     <h2 class="portfolio-header ">Banking App Interface Concept</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
