--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class="header-item">
                     <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
                 <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html" target="_blank" class="">Portfolio</a></li>
+                    <a class="header-link link" href="./portfolio.html" target="_blank" >Portfolio</a></li>
                 <li class="header-item">
                     <a class="header-link link" href="">Contacts</a></li>
             </ul>
