--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">
-                    <img class="" src="./images/img-normalcy-min.jpg" alt="normalcy" width="360"/>
+                    <img class="portfolio-img" src="./images/img-normalcy-min.jpg" alt="normalcy" width="360"/>
                     <h2 class="portfolio-header">Meditation App</h2> 
                     <p class="portfolio-text ">App</p></a>
                 </li>
@@ -96,7 +96,7 @@
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">  
-                    <img class="portfolio-img" src="./images/img-coffee-min.jpg" alt="cofee"/>
+                    <img class="portfolio-img" src="./images/img-coffee-min.jpg" alt="cofee"  width="360" />
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
                     <p class="portfolio-text link">Web Site</p></a>
                 </li>
