--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-nav link">
-            <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
+            <a href="./index.html" class="header-title link"> Web<span class="header-logo">Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
@@ -104,7 +104,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-title link">Web<span>Studio</span></a>
+        <a href="./index.html" class="footer-title link">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
