--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <nav class="header-nav link">
-            <a href="./index.html" class="header-title link"> Web<span class="header-logo">Studio</span></a>
+            <a href="./index.html" class="header-logo link"> Web<span>Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html" target="_blank">Studio</a></li>
@@ -96,7 +96,7 @@
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">  
-                    <img class="portfolio-img" src="./images/img-coffee-min.jpg" alt="cofee"  width="360" />
+                    <img class="portfolio-img" src="./images/img-coffee-min.jpg" alt="cofee"width="360" />
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
                     <p class="portfolio-text link">Web Site</p></a>
                 </li>
@@ -104,7 +104,7 @@
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-title link">Web<span class="footer-logo">Studio</span></a>
+        <a href="./index.html" class="footer-title link">Web<span>Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
