--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
                     <a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address class="contacts">
+        <address class="contact">
             <ul class="header-cont list">
                 <li class="header-cont-inform list">
                     <a class="header-cont-inform link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -98,7 +98,7 @@
                     <a href="" class="portfolio link">  
                     <img class="portfolio-img" src="./images/img-coffee-min.jpg" alt="cofee"width="360" />
                     <h2 class="portfolio-header">Fresh Coffee</h2> 
-                    <p class="portfolio-text link">Web Site</p></a>
+                    <p class="portfolio-text">Web Site</p></a>
                 </li>
             </ul>
         </section>
