--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 </li>
                 <li class="portfolio-til">
                     <a href="" class="portfolio link">         
-                    <img class="portfolio-img"g src="./images/img-smile-min.jpg" alt="smile" width="360"/>
+                    <img class="portfolio-img" src="./images/img-smile-min.jpg" alt="smile" width="360"/>
                     <h2 class="portfolio-header">Online Courses</h2> 
                     <p class="portfolio-text">Marketing</p></a>
                 </li>
